Fixes compilation in some scenarios due to kiota bug

--- a/src/Soenneker.X.Runners.OpenApiClient.csproj
+++ b/src/Soenneker.X.Runners.OpenApiClient.csproj
@@ -43,9 +43,11 @@
     </ItemGroup>
     
     <ItemGroup>
+        <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.14.0" />
         <PackageReference Include="Soenneker.Extensions.LoggerConfiguration" Version="3.0.988" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
         <PackageReference Include="Soenneker.Managers.Runners" Version="3.0.1051" />
         <PackageReference Include="Soenneker.Utils.File.Download" Version="3.0.1193" />
+        <PackageReference Include="Soenneker.Utils.Usings" Version="3.0.23" />
     </ItemGroup>
 </Project>
