--- a/.github/workflows/daily-automatic-update.yml
+++ b/.github/workflows/daily-automatic-update.yml
@@ -10,6 +10,7 @@ env:
   NAME: ${{ secrets.NAME }}
   EMAIL: ${{ secrets.EMAIL }}
   NUGET__TOKEN: ${{ secrets.NUGET__TOKEN }}
+  GIT__TOKEN: ${{ secrets.GIT__TOKEN }}
 
 jobs:
 
