--- a/src/Soenneker.X.Runners.OpenApiClient.csproj
+++ b/src/Soenneker.X.Runners.OpenApiClient.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFrameworks>net9.0</TargetFrameworks>
+        <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <Platforms>AnyCPU</Platforms>
         <NoWarn>$(NoWarn);1591</NoWarn>
@@ -10,7 +10,7 @@
 
     <PropertyGroup>
         <Description>Automatically updates the Soenneker.X.OpenApiClient package</Description>
-        <Version Condition="'$(BUILD_VERSION)' == ''">3.0.0</Version>
+        <Version Condition="'$(BUILD_VERSION)' == ''">4.0.0</Version>
         <Version Condition="'$(BUILD_VERSION)' != ''">$(BUILD_VERSION)</Version>
         <AssemblyName>Soenneker.X.Runners.OpenApiClient</AssemblyName>
         <PackageId>Soenneker.X.Runners.OpenApiClient</PackageId>
