--- a/src/Soenneker.X.Runners.OpenApiClient.csproj
+++ b/src/Soenneker.X.Runners.OpenApiClient.csproj
@@ -44,7 +44,7 @@
     
     <ItemGroup>
         <PackageReference Include="Soenneker.Extensions.LoggerConfiguration" Version="4.0.1046" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.10" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-rc.2.25502.107" />
         <PackageReference Include="Soenneker.Managers.Runners" Version="4.0.1417" />
         <PackageReference Include="Soenneker.Utils.File.Download" Version="4.0.1280" />
         <PackageReference Include="Soenneker.Utils.Usings" Version="4.0.74" />
