--- a/src/Soenneker.X.Runners.OpenApiClient.csproj
+++ b/src/Soenneker.X.Runners.OpenApiClient.csproj
@@ -47,6 +47,9 @@
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.1" />
         <PackageReference Include="Soenneker.Managers.Runners" Version="4.0.1489" />
         <PackageReference Include="Soenneker.Utils.File.Download" Version="4.0.1314" />
-        <PackageReference Include="Soenneker.Utils.Usings" Version="4.0.94" />
+        <PackageReference Include="Soenneker.Utils.Usings" Version="4.0.100" />
+        <PackageReference Include="Microsoft.Build.Framework" Version="18.0.2" ExcludeAssets="runtime" PrivateAssets="all">
+            <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 </Project>
