--- a/src/Soenneker.X.Runners.OpenApiClient.csproj
+++ b/src/Soenneker.X.Runners.OpenApiClient.csproj
@@ -15,7 +15,7 @@
         <AssemblyName>Soenneker.X.Runners.OpenApiClient</AssemblyName>
         <PackageId>Soenneker.X.Runners.OpenApiClient</PackageId>
         <PackageTags>x runners openapiclient twitter httpclient singleton openapi xopenapirunner openapirunner csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
