--- a/src/Soenneker.X.Runners.OpenApiClient.csproj
+++ b/src/Soenneker.X.Runners.OpenApiClient.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
+<?xml version="1.0" encoding="utf-8"?><Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -46,6 +46,7 @@
         <PackageReference Include="Soenneker.Extensions.LoggerConfiguration" Version="4.0.1126" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.2" />
         <PackageReference Include="Soenneker.Managers.Runners" Version="4.0.1728" />
+        <PackageReference Include="Soenneker.Utils.Directory" Version="4.0.779" />
         <PackageReference Include="Soenneker.Utils.File.Download" Version="4.0.1410" />
         <PackageReference Include="Soenneker.Utils.Usings" Version="4.0.148" />
         <PackageReference Include="Microsoft.Build.Framework" Version="18.0.2" ExcludeAssets="runtime" PrivateAssets="all">
